--- a/app/src/main/res/drawable/caixa_edittxt.xml
+++ b/app/src/main/res/drawable/caixa_edittxt.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="@color/primario"/>
+        android:color="#36939a"/>
     <corners
         android:radius="10dp" />
 
