--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -39,9 +39,8 @@
         android:id="@+id/logo"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
@@ -50,13 +49,13 @@
         android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="5dp"
         android:text="Seja Bem-Vindo"
         android:textColor="#36939a"
         android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
@@ -71,12 +70,12 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.116"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titulo" />
 
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
@@ -102,11 +101,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginHorizontal="35dp"
+                        android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
+                        android:autofillHints=""
                         android:background="@drawable/caixa_edittxt"
                         android:drawablePadding="8dp"
-                        android:autofillHints=""
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
                         android:paddingHorizontal="8dp"
@@ -118,44 +117,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="15dp"
                         android:text="Digite um email:"
-                        android:textColor="#36939a"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-                </FrameLayout>
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
-
-                    <EditText
-                        android:id="@+id/user"
-                        android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginHorizontal="35dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/caixa_edittxt"
-                        android:drawablePadding="8dp"
-                        android:autofillHints=""
-                        android:imeOptions="actionDone"
-                        android:inputType="textEmailAddress"
-                        android:paddingHorizontal="8dp"
-                        android:paddingTop="20dp"
-                        android:textSize="14sp"
-                        tools:ignore="LabelFor" />
-
-                    <TextView
-                        android:id="@+id/userEscrita"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="40dp"
-                        android:layout_marginTop="15dp"
-                        android:text="Crie um user:"
                         android:textColor="#36939a"
                         android:textSize="12sp"
                         android:textStyle="bold" />
@@ -171,7 +135,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginHorizontal="35dp"
+                        android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
                         android:autofillHints=""
                         android:background="@drawable/caixa_edittxt"
@@ -180,16 +144,17 @@
                         android:inputType="textEmailAddress"
                         android:paddingHorizontal="8dp"
                         android:paddingTop="20dp"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        tools:ignore="LabelFor" />
 
                     <TextView
                         android:id="@+id/nomeEscrita"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="15dp"
-                        android:text="Crie um nome:"
+                        android:text="Digite seu nome:"
                         android:textColor="#36939a"
                         android:textSize="12sp"
                         android:textStyle="bold" />
@@ -205,11 +170,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginHorizontal="35dp"
+                        android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
+                        android:autofillHints=""
                         android:background="@drawable/caixa_edittxt"
                         android:drawablePadding="8dp"
-                        android:autofillHints=""
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
                         android:paddingHorizontal="8dp"
@@ -222,7 +187,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="15dp"
                         android:text="Digite seu CPF:"
                         android:textColor="#36939a"
@@ -251,7 +216,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="57dp"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginHorizontal="35dp"
+                            android:layout_marginHorizontal="40dp"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/caixa_edittxt"
                             android:drawablePadding="8dp"
@@ -267,7 +232,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="10dp"
                         android:text="Crie uma senha(min. 8 caracteres):"
                         android:textColor="#36939a"
@@ -296,7 +261,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="57dp"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginHorizontal="35dp"
+                            android:layout_marginHorizontal="40dp"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/caixa_edittxt"
                             android:drawablePadding="8dp"
@@ -312,7 +277,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="10dp"
                         android:text="Confirme a senha:"
                         android:textColor="#36939a"
@@ -326,7 +291,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginHorizontal="35dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_marginTop="30dp"
                     android:backgroundTint="#36939a"
                     android:text="Cadastrar"
