--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -13,28 +13,23 @@
         android:id="@+id/florMenor"
         android:layout_width="86dp"
         android:layout_height="122dp"
-        android:rotation="-36"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/florMaior"
-        app:layout_constraintHorizontal_bias="0.906"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="80dp"
         android:alpha="0.4"
-        app:layout_constraintTop_toBottomOf="@+id/titulo"
-        app:layout_constraintVertical_bias="0.084"
+        android:rotation="-55"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/flor" />
 
     <ImageView
         android:id="@+id/florMaior"
-        android:layout_width="159dp"
-        android:layout_height="220dp"
-        android:layout_marginVertical="2dp"
-        android:layout_marginEnd="16dp"
-        android:rotation="36"
+        android:layout_width="139dp"
+        android:layout_height="200dp"
         android:alpha="0.4"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:rotation="36"
+        android:layout_marginTop="7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22"
         app:srcCompat="@drawable/flor" />
 
     <ImageView
