--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -179,7 +179,7 @@
 
 
                 <Button
-                    android:id="@+id/botaoCadastro"
+                    android:id="@+id/botaoLogin"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_gravity="center_horizontal"
