--- a/app/src/main/res/layout/fragment_formularios.xml
+++ b/app/src/main/res/layout/fragment_formularios.xml
@@ -17,7 +17,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,6 @@
         android:layout_marginVertical="30dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerLine">
@@ -81,22 +80,38 @@
                         android:gravity="start"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/textView4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Idade:" />
-
-                        <EditText
-                            android:id="@+id/editTextTextMultiLine7"
+                        <FrameLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="4dp"
-                            android:background="@drawable/caixa_edittxt"
-                            android:ems="10"
-                            android:gravity="start|top"
-                            android:inputType="textMultiLine"
-                            android:padding="8dp" />
+                            android:layout_marginTop="10dp">
+
+                            <EditText
+                                android:id="@+id/email"
+                                android:layout_width="match_parent"
+                                android:layout_height="55dp"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginTop="10dp"
+                                android:autofillHints=""
+                                android:background="@drawable/caixa_edittxt"
+                                android:drawablePadding="8dp"
+                                android:imeOptions="actionDone"
+                                android:inputType="textEmailAddress"
+                                android:paddingHorizontal="8dp"
+                                android:paddingTop="20dp"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/emailEscrita"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginHorizontal="35dp"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginTop="15dp"
+                                android:text="Digite um email:"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
+                        </FrameLayout>
+
                     </LinearLayout>
 
                     <LinearLayout
