--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6EB8BA"
+    android:fitsSystemWindows="true"
     tools:context=".Home">
 
     <ImageView
