--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -207,10 +207,25 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginHorizontal="35dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="60dp"
                     android:clickable="true"
                     android:focusable="true"
                     android:text="Não possui cadastro? Clique aqui para se cadastrar"
+                    android:textAlignment="center"
+                    android:textColor="#36939a"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/esqueceuLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="60dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:text="Esqueceu a senha?"
                     android:textAlignment="center"
                     android:textColor="#36939a"
                     android:textSize="14sp"
