--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -95,7 +95,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fillViewport="true">
 
             <LinearLayout
@@ -347,7 +347,10 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:visibility="visible" />
+
+
             </LinearLayout>
+
         </ScrollView>
     </LinearLayout>
 
