--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Healy" parent="Theme.Material3.DayNight.NoActionBar">
 
-        <item name="colorPrimary">@color/primario</item>
-        <item name="colorPrimaryVariant">@color/primario</item>
+        <item name="colorPrimary">@color/terciaria</item>
+        <item name="colorPrimaryVariant">@color/terciaria</item>
         <item name="colorOnPrimary">@color/white</item>
 
         <item name="colorSecondary">@color/secundario</item>
