cadastro e esqueceu senha autentificacao feitas

--- a/app/src/main/res/layout/fragment_esqueceu_senha.xml
+++ b/app/src/main/res/layout/fragment_esqueceu_senha.xml
@@ -112,7 +112,7 @@
                     android:layout_marginTop="10dp">
 
                     <EditText
-                        android:id="@+id/email"
+                        android:id="@+id/emailEsqueceu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -159,7 +159,7 @@
 
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/senha"
+                            android:id="@+id/novaSenha"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
@@ -178,7 +178,7 @@
 
 
                     <TextView
-                        android:id="@+id/senhaEscrita"
+                        android:id="@+id/novaSenhaEscrita"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="35dp"
@@ -207,7 +207,7 @@
 
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/confirmaSenha"
+                            android:id="@+id/confirmaSenhaNova"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
