--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -112,7 +112,7 @@
                     android:layout_marginTop="10dp">
 
                     <EditText
-                        android:id="@+id/email"
+                        android:id="@+id/emailCadastro"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -150,7 +150,7 @@
                     android:layout_marginTop="10dp">
 
                     <EditText
-                        android:id="@+id/nome"
+                        android:id="@+id/nomeCadastro"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -189,7 +189,7 @@
                     android:layout_marginTop="10dp">
 
                     <EditText
-                        android:id="@+id/cpf"
+                        android:id="@+id/cpfCadastro"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -239,7 +239,7 @@
 
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/senha"
+                            android:id="@+id/senhaCadastro"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
@@ -287,7 +287,7 @@
 
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/confirmaSenha"
+                            android:id="@+id/confirmaSenhaCadastro"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
