--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
+    android:layout_marginHorizontal="30dp"
+    android:layout_marginVertical="30dp"
     app:cardCornerRadius="10dp"
     android:fitsSystemWindows="true"
     app:cardElevation="5dp">
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
+
 
         <TextView
             android:id="@+id/formulario"
